Update icon position on mobile and fix column issue

--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -32,7 +32,7 @@
   position: relative;
   width: 100%;
   max-width: 704px;
-  margin: 120px auto;
+  margin: 48px auto;
   padding: 0 32px;
   box-sizing: border-box; }
 .column,
@@ -42,6 +42,9 @@
   box-sizing: border-box; }
 .three.columns {
   width: 50%;
+}
+.three.columns.icon {
+  width: 100%;
 }
 
 /* For devices larger than 400px */
@@ -54,6 +57,7 @@
 /* For devices larger than 550px */
 @media (min-width: 550px) {
   .container {
+    margin: 120px auto;
     width: 80%; }
   .column,
   .columns {
@@ -61,6 +65,9 @@
   .column:first-child,
   .columns:first-child {
     margin-left: 0; }
+  .three.columns.icon {
+  width: 22%;
+}
 
   .one.column,
   .one.columns                    { width: 4.66666666667%; }
